(EAI-1173) Content sources endpoint (#833)
* Create listDataSources route, plug into searchContent, blank file created for listDatasources test file

* Clean sources endpoint and data types

* Add openapi spec documentation for new listDataSources endpoint

* listDataSources test file

* PR feedback and add isCurrent

* Clean yaml

* Rename version -> versions

* PR feedback

* ci

* Change embedding search index

* Use plain memory server

* Fix tests

* Make unused parameter obvious

* Use cache in listDataSources

* Add tests for cache
